Spark rest api support